# ual-ecar-ros-pkg

./: .gitignore  .gitmodules  .travis.yml  Comunicacion.ino  Comunicacion_ROS.ino  README.md  Steering_wheel_control.m  steering_wheel_system.mdl
automatic_mode/: CMakeLists.txt  package.xml
automatic_mode/include/automatic_mode/: AutomaticMode.h
automatic_mode/src/: automatic_mode_node.cpp
automatic_mode/src/automatic_mode/: AutomaticMode.cpp
battery_charge/: CMakeLists.txt  README.md  package.xml
battery_charge/firmware/: battery-monitor-eeprom-ft232r.xml
battery_charge/firmware/battery-firmware/: battery-firmware.atsln
battery_charge/firmware/battery-firmware/firmware/ArduinoCore/Debug/: Makefile
battery_charge/firmware/battery-firmware/firmware/firmware/: Battery.h  batterycharge2pc-structs.h  batterycharge2pc-structs[Conflicto].h  batterycharge_declarations.h  config.h  firmware.componentinfo.xml  firmware.cppproj  firmware.ino  main.cpp  process_Battery.cpp  process_command.cpp  process_internal_adc.cpp  serial.cpp
battery_charge/firmware/battery-firmware/firmware/firmware/Release/: Makefile  firmware.hex
battery_charge/include/battery_charge/: BatteryCharge_LowLevel.h
battery_charge/msg/: BatReading.msg
battery_charge/src/: battery_charge_node.cpp
battery_charge/src/battery_charge/: BatteryCharge_LowLevel.cpp
doc/: Makefile  arduino_daq.doth  launch_steer_lowlevel.app
joystick_driving/: CMakeLists.txt  README.md  joystick_axes_buttons.odp  joystick_driving.doth  package.xml
joystick_driving/src/: joystick_driving_node.cpp
scripts/: Bag2Txt.sh  Txt2Mat.m
steer_controller/: CMakeLists.txt  CSteerControllerLowLevel.h  CSteerControllerLowLevel_model.cpp  README.md  SteerControllerLowLevel_example.moos  eeprom.xml  main.cpp  package.xml  steer_controller.doth  steering-control-firmware2pc-structs.h
steer_controller/firmware/: CUART.cpp  CUART.h  LEDs.h  SteeringControlFirmware.atsln  SteeringControlFirmware.atsuo  SteeringControlFirmware.componentinfo.xml  SteeringControlFirmware.cpp  SteeringControlFirmware.cppproj  SteeringControlFirmware_6_1.atsln  SteeringControlFirmware_6_1.cppproj  commands.cpp  commands.h  config.h  firmware-common.h  main.cpp  mod_dac_max5500.cpp  mod_dac_max5500.h  mod_ems22a.cpp  motor_control.cpp  process_command.cpp  process_encoder.cpp  process_internal_adc.cpp  process_steer_controller.cpp  serial.cpp  steer_controller2pc-structs.h  steer_controller_declarations.h  steer_controller_firmware.atsln  steer_controller_firmware.cppproj
steer_controller/firmware_arduino/: CUART.cpp  CUART.h  LEDs.h  SteeringControlFirmware.atsln  SteeringControlFirmware.cpp  SteeringControlFirmware.cppproj  commands.cpp  commands.h  firmware-common.h  motor_control.cpp
steer_controller/firmware_arduino_mega/: CUART.cpp  CUART.h  LEDs.h  SteeringControlFirmware.atsln  SteeringControlFirmware.cpp  SteeringControlFirmware.cppproj  commands.cpp  firmware-common.h  motor_control.cpp
steer_controller/src/: CSteerControllerLowLevel.cpp  steer_controller_node.cpp
system_identification/: CMakeLists.txt  README.md  package.xml
system_identification/include/system_identification/: SystemIdentification.h
system_identification/msg/: AnalogReading.msg  Controller_parameters.msg  System_parameters.msg
system_identification/src/: system_identification_node.cpp
system_identification/src/system_identification/: system_identification.cpp
ual_ecar_config/: CMakeLists.txt  package.xml
ual_ecar_config/launch/: autorun.sh  camera_stereoBumblebee_libdc1394.ini  epos_steering.launch  epos_steering.urdf  epos_steering.yaml  joystick_driving.launch  libredaq_odometry.launch  motor_volante.perspective  rawlog-grabber-bumblebee.ini  rawlog-grabber-novatel.ini  rawlog-grabber-sick-lms200.ini  rawlog-grabber-velodyne.ini  sensors_VI.launch  sensors_velodyne_novatel.launch  steering_low_level.launch  steering_low_level_real_car.launch  ual_ecar_odometry.launch  ual_ecar_rviz.launch  ual_ecar_vehicle_controller.launch  vis_default.rviz
ual_ecar_odometry/: CMakeLists.txt  README.md  package.xml
ual_ecar_odometry/src/: ual_ecar_odometry_node.cpp
ual_ecar_rviz/: CMakeLists.txt  package.xml  plugin_description.xml
ual_ecar_rviz/src/: CarControlPanel.cpp  CarControlPanel.h
ual_ecar_simulation/: CMakeLists.txt  package.xml
ual_ecar_simulation/launch/: ecar-world-01.world.xml  ecarm.vehicle.xml
ual_ecar_simulation/models/: ecarm-wheel.dae
ual_ecar_vehicle_controller/: CMakeLists.txt  README.md  package.xml  steering_controller_with_abs_encoder.hex  steering_controller_without_abs_encoder.hex
ual_ecar_vehicle_controller/firmware/: config.h  main.cpp  mod_dac_max5500.cpp  mod_ems22a.cpp  process_abs_enc.cpp  process_command.cpp  process_controller.cpp  process_encoder.cpp  process_internal_adc.cpp  process_steer_controller.cpp  serial.cpp  steer_controller2pc-structs.h  steer_controller_declarations.h  steer_controller_firmware.atsln  steer_controller_firmware.cppproj  vehicle_controller2pc-structs.h  vehicle_controller_declarations.h  vehicle_controller_firmware.componentinfo.xml  vehicle_controller_firmware.cppproj  vehicle_controller_steer2pc-structs.h  vehicle_controller_steer_declarations.h
ual_ecar_vehicle_controller/firmware_cruise_control/: main.cpp  process_command.cpp  process_controller.cpp  process_encoder.cpp  process_internal_adc.cpp  serial.cpp  vehicle_cruise_control.atsln  vehicle_cruise_control.componentinfo.xml  vehicle_cruise_control.cppproj  vehicle_cruise_control2pc-structs.h  vehicle_cruise_control_declarations.h
ual_ecar_vehicle_controller/firmware_throttle/: main.cpp  process_command.cpp  process_controller.cpp  process_encoder.cpp  process_internal_adc.cpp  serial.cpp  vehicle_controller_throttle.atsln  vehicle_controller_throttle.cppproj  vehicle_controller_throttle2pc-structs.h  vehicle_controller_throttle_declarations.h
ual_ecar_vehicle_controller/msg/: ControlSignal.msg  ControlSignalSpeedCruise.msg  ControlSignalSteer.msg  EncoderAbsReading.msg  SteerControllerStatus.msg  eCARMspeed.msg
(+62 files in other folders)
