<?xml version="1.0"?>
<package>
  <name>system_identification</name>
  <version>1.0.0</version>
  <description>The system_identification package</description>

  <maintainer email="fma527@inlumine.ual.es">Francisco Jose Manas Alvarez</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
