<?xml version="1.0"?>
<package format="2">
  <name>system_identification</name>
  <version>1.0.0</version>
  <description>The system_identification package</description>

  <maintainer email="fma527@ual.es">Francisco Jose Manas Alvarez</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mrpt1</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
