<?xml version="1.0"?>
<package>
  <name>ual_ecar_odometry</name>
  <version>1.0.0</version>
  <description>eCar odometry node</description>

  <maintainer email="jlblanco@ual.es">Jose Luis Blanco Claraco</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
	<build_depend>message_generation</build_depend>
  <build_depend>phidgets_high_speed_encoder</build_depend>
  <build_depend>mrpt_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>phidgets_high_speed_encoder</run_depend>
  <run_depend>mrpt_bridge</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
