<package>
  <name>ual_ecar_rviz</name>
  <version>0.0.1</version>
  <description>
     UAL eCar Control Panel for RViz
  </description>
  <maintainer email="jlblanco@ual.es">Jose Luis Blanco-Claraco</maintainer>
  <author email="jlblanco@ual.es">Jose Luis Blanco-Claraco</author>
  <license>GNU GPL v3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
